@@ -26,7 +26,19 @@
           </tr>
           <tr>
             <td style="background-color: #FFFFFF; width: 83.333%; text-align: center; vertical-align: middle;"><span style="font-family:  Helvetica,Arial,sans-serif;"></span></td>
-            <td style="width: 16.667%; text-align: center; vertical-align: middle;"><a href="/restart"><span style="font-family: Helvetica ,Arial,sans-serif;">Restart</span></a></td>
+            <td style="width: 16.667%; text-align: center; vertical-align: middle;"><a href="/utils/restart"><span style="font-family: Helvetica ,Arial,sans-serif;">Restart</span></a></td>
+            <td style="height: 25px;">
+            </td>
+          </tr>
+          <tr>
+            <td style="background-color: #FFFFFF; width: 83.333%; text-align: center; vertical-align: middle;"><span style="font-family:  Helvetica,Arial,sans-serif;"></span></td>
+            <td style="width: 16.667%; text-align: center; vertical-align: middle;"><a href="/utils/reboot"><span style="font-family: Helvetica ,Arial,sans-serif;">Reboot</span></a></td>
+            <td style="height: 25px;">
+            </td>
+          </tr>
+          <tr>
+            <td style="background-color: #FFFFFF; width: 83.333%; text-align: center; vertical-align: middle;"><span style="font-family:  Helvetica,Arial,sans-serif;"></span></td>
+            <td style="width: 16.667%; text-align: center; vertical-align: middle;"><a href="/utils/shutdown"><span style="font-family: Helvetica ,Arial,sans-serif;">Shutdown</span></a></td>
             <td style="height: 25px;">
             </td>
           </tr>
