@@ -31,7 +31,33 @@ def utils_log():
     loggedin = session.get('logged_in')
     return render_template('utils.html', editing=0, loggedin=loggedin, log=1, lines=maxlines, stream=memorylog.getvalue())
 
-@web_utils.route('/restart_dialog', methods=['POST'])
+@web_utils.route('/utils/reboot_dialog', methods=['POST'])
+@login_required
+def reboot_dialog():
+    if request.method == "POST":
+        result=request.form
+        # add results to db
+        if result['Button'] == 'Ok':
+            AppKiller.reboot()
+            pass
+        return redirect('/logout')
+    else:
+        return render_template("401.html"), 401
+
+@web_utils.route('/utils/shutdown_dialog', methods=['POST'])
+@login_required
+def shutdown_dialog():
+    if request.method == "POST":
+        result=request.form
+        # add results to db
+        if result['Button'] == 'Ok':
+            AppKiller.shutdown()
+            pass
+        return redirect('/logout')
+    else:
+        return render_template("401.html"), 401
+
+@web_utils.route('/utils/restart_dialog', methods=['POST'])
 @login_required
 def restart_dialog():
     if request.method == "POST":
@@ -44,7 +70,17 @@ def restart_dialog():
     else:
         return render_template("401.html"), 401
 
-@web_utils.route('/restart')
+@web_utils.route('/utils/restart')
 @login_required
 def restart():
     return render_template('restart.html')
+
+@web_utils.route('/utils/shutdown')
+@login_required
+def shutdown():
+    return render_template('shutdown.html')
+
+@web_utils.route('/utils/reboot')
+@login_required
+def reboot():
+    return render_template('reboot.html')
